--- a/games.html
+++ b/games.html
@@ -631,7 +631,7 @@
               <a href="videos.html" class="footer_last_part_menu">Latest Videos</a>
             </li>
             <li>
-              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
+              <a href="games.html" class="footer_last_part_menu">Games</a>
             </li>
           </ul>
         </div>
@@ -657,6 +657,9 @@
             </li>
             <li>
               <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
+            </li>
+            <li>
+              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
             </li>
           </ul>
         </div>
