--- a/index.html
+++ b/index.html
@@ -183,9 +183,7 @@
         <div class="container-fluid pb-4 pt-5">
           <div class="animate-box">
             <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">
-              <a href="videos.html"> Latest Videos
-                <span class="sr-only">(current)</span>
-              </a>
+              Latest Videos
             </div>
 
             <div class="owl-carousel owl-theme" id="slider3">
@@ -395,7 +393,7 @@
               <a href="videos.html" class="footer_last_part_menu">Latest Videos</a>
             </li>
             <li>
-              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
+              <a href="games.html" class="footer_last_part_menu">Games</a>
             </li>
           </ul>
         </div>
@@ -421,6 +419,9 @@
             </li>
             <li>
               <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
+            </li>
+            <li>
+              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
             </li>
           </ul>
         </div>
