--- a/players.html
+++ b/players.html
@@ -129,7 +129,7 @@
   </div>
 
   <!-- PLAYER BIOS and CIRCLE PICS -->
-  <div class="container-fluid animate-box">
+  <div class="container-fluid animate-box" style="margin-bottom: 60px">
     <div class="container" style="padding-top: 60px">
 
       <!-- <div id="wrap"> -->
@@ -303,10 +303,6 @@
           <div class="col-12 text-center pb-4 pt-4">
             <a href="#" class="btn_mange_pagging">
               <i class="fa fa-long-arrow-left"></i>&nbsp;&nbsp; Previous</a>
-            <a href="#" class="btn_pagging">1</a>
-            <a href="#" class="btn_pagging">2</a>
-            <a href="#" class="btn_pagging">3</a>
-            <a href="#" class="btn_pagging">...</a>
             <a href="#" class="btn_mange_pagging">Next
               <i class="fa fa-long-arrow-right"></i>&nbsp;&nbsp; </a>
           </div>
@@ -377,7 +373,7 @@
               <a href="videos.html" class="footer_last_part_menu">Latest Videos</a>
             </li>
             <li>
-              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
+              <a href="games.html" class="footer_last_part_menu">Games</a>
             </li>
           </ul>
         </div>
@@ -403,6 +399,9 @@
             </li>
             <li>
               <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
+            </li>
+            <li>
+              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
             </li>
           </ul>
         </div>
