--- a/teams.html
+++ b/teams.html
@@ -173,7 +173,9 @@
                       <a href="players.html">Killz_Streak57</a>
                     </td>
                     </td>
-                    <td class="center">Dave Smith</td>
+                    <td class="center">
+                      <a href="player1.html">Dave Smith</a>
+                    </td>
                     <td class="center">San Francisco, CA</td>
                   </tr>
                   <tr class="gradeX">
@@ -181,7 +183,9 @@
                       <a href="players.html">Killz_Streak57</a>
                     </td>
                     </td>
-                    <td class="center">Dave Smith</td>
+                    <td class="center">
+                      <a href="player1.html">Dave Smith</a>
+                    </td>
                     <td class="center">San Francisco, CA</td>
                   </tr>
                   <tr class="gradeX">
@@ -189,7 +193,9 @@
                       <a href="players.html">Killz_Streak57</a>
                     </td>
                     </td>
-                    <td class="center">Dave Smith</td>
+                    <td class="center">
+                      <a href="player1.html">Dave Smith</a>
+                    </td>
                     <td class="center">San Francisco, CA</td>
                   </tr>
                   <tr class="gradeX">
@@ -197,7 +203,9 @@
                       <a href="players.html">Killz_Streak57</a>
                     </td>
                     </td>
-                    <td class="center">Dave Smith</td>
+                    <td class="center">
+                      <a href="player1.html">Dave Smith</a>
+                    </td>
                     <td class="center">San Francisco, CA</td>
                   </tr>
                   <tr class="gradeX">
@@ -205,7 +213,9 @@
                       <a href="players.html">Killz_Streak57</a>
                     </td>
                     </td>
-                    <td class="center">Dave Smith</td>
+                    <td class="center">
+                      <a href="player1.html">Dave Smith</a>
+                    </td>
                     <td class="center">San Francisco, CA</td>
                   </tr>
                   <tr class="gradeX">
@@ -213,7 +223,9 @@
                       <a href="players.html">Killz_Streak57</a>
                     </td>
                     </td>
-                    <td class="center">Dave Smith</td>
+                    <td class="center">
+                      <a href="player1.html">Dave Smith</a>
+                    </td>
                     <td class="center">San Francisco, CA</td>
                   </tr>
                 </tbody>
@@ -262,7 +274,9 @@
                       <a href="players.html">Killz_Streak57</a>
                     </td>
                     </td>
-                    <td class="center">Dave Smith</td>
+                    <td class="center">
+                      <a href="player1.html">Dave Smith</a>
+                    </td>
                     <td class="center">San Francisco, CA</td>
                   </tr>
                   <tr class="gradeX">
@@ -270,7 +284,9 @@
                       <a href="players.html">Killz_Streak57</a>
                     </td>
                     </td>
-                    <td class="center">Dave Smith</td>
+                    <td class="center">
+                      <a href="player1.html">Dave Smith</a>
+                    </td>
                     <td class="center">San Francisco, CA</td>
                   </tr>
                   <tr class="gradeX">
@@ -278,7 +294,9 @@
                       <a href="players.html">Killz_Streak57</a>
                     </td>
                     </td>
-                    <td class="center">Dave Smith</td>
+                    <td class="center">
+                      <a href="player1.html">Dave Smith</a>
+                    </td>
                     <td class="center">San Francisco, CA</td>
                   </tr>
                   <tr class="gradeX">
@@ -286,7 +304,9 @@
                       <a href="players.html">Killz_Streak57</a>
                     </td>
                     </td>
-                    <td class="center">Dave Smith</td>
+                    <td class="center">
+                      <a href="player1.html">Dave Smith</a>
+                    </td>
                     <td class="center">San Francisco, CA</td>
                   </tr>
                   <tr class="gradeX">
@@ -294,7 +314,9 @@
                       <a href="players.html">Killz_Streak57</a>
                     </td>
                     </td>
-                    <td class="center">Dave Smith</td>
+                    <td class="center">
+                      <a href="player1.html">Dave Smith</a>
+                    </td>
                     <td class="center">San Francisco, CA</td>
                   </tr>
                   <tr class="gradeX">
@@ -302,7 +324,9 @@
                       <a href="players.html">Killz_Streak57</a>
                     </td>
                     </td>
-                    <td class="center">Dave Smith</td>
+                    <td class="center">
+                      <a href="player1.html">Dave Smith</a>
+                    </td>
                     <td class="center">San Francisco, CA</td>
                   </tr>
                 </tbody>
@@ -351,7 +375,9 @@
                       <a href="players.html">Killz_Streak57</a>
                     </td>
                     </td>
-                    <td class="center">Dave Smith</td>
+                    <td class="center">
+                      <a href="player1.html">Dave Smith</a>
+                    </td>
                     <td class="center">San Francisco, CA</td>
                   </tr>
                   <tr class="gradeX">
@@ -359,7 +385,9 @@
                       <a href="players.html">Killz_Streak57</a>
                     </td>
                     </td>
-                    <td class="center">Dave Smith</td>
+                    <td class="center">
+                      <a href="player1.html">Dave Smith</a>
+                    </td>
                     <td class="center">San Francisco, CA</td>
                   </tr>
                   <tr class="gradeX">
@@ -367,7 +395,9 @@
                       <a href="players.html">Killz_Streak57</a>
                     </td>
                     </td>
-                    <td class="center">Dave Smith</td>
+                    <td class="center">
+                      <a href="player1.html">Dave Smith</a>
+                    </td>
                     <td class="center">San Francisco, CA</td>
                   </tr>
                   <tr class="gradeX">
@@ -375,7 +405,9 @@
                       <a href="players.html">Killz_Streak57</a>
                     </td>
                     </td>
-                    <td class="center">Dave Smith</td>
+                    <td class="center">
+                      <a href="player1.html">Dave Smith</a>
+                    </td>
                     <td class="center">San Francisco, CA</td>
                   </tr>
                   <tr class="gradeX">
@@ -383,7 +415,9 @@
                       <a href="players.html">Killz_Streak57</a>
                     </td>
                     </td>
-                    <td class="center">Dave Smith</td>
+                    <td class="center">
+                      <a href="player1.html">Dave Smith</a>
+                    </td>
                     <td class="center">San Francisco, CA</td>
                   </tr>
                   <tr class="gradeX">
@@ -391,7 +425,9 @@
                       <a href="players.html">Killz_Streak57</a>
                     </td>
                     </td>
-                    <td class="center">Dave Smith</td>
+                    <td class="center">
+                      <a href="player1.html">Dave Smith</a>
+                    </td>
                     <td class="center">San Francisco, CA</td>
                   </tr>
                 </tbody>
@@ -464,7 +500,7 @@
               <a href="videos.html" class="footer_last_part_menu">Latest Videos</a>
             </li>
             <li>
-              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
+              <a href="games.html" class="footer_last_part_menu">Games</a>
             </li>
           </ul>
         </div>
@@ -490,6 +526,9 @@
             </li>
             <li>
               <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
+            </li>
+            <li>
+              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
             </li>
           </ul>
         </div>
