--- a/contact.html
+++ b/contact.html
@@ -233,7 +233,7 @@
               <a href="videos.html" class="footer_last_part_menu">Latest Videos</a>
             </li>
             <li>
-              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
+              <a href="games.html" class="footer_last_part_menu">Games</a>
             </li>
           </ul>
         </div>
@@ -243,11 +243,11 @@
               <hr class="short">
             </li>
             <!-- <li>
-                <a href="teams.html" class="footer_last_part_menu">Teams</a>
-              </li>
-              <li>
-                <a href="players.html" class="footer_last_part_menu">Players</a>
-              </li> -->
+                  <a href="teams.html" class="footer_last_part_menu">Teams</a>
+                </li>
+                <li>
+                  <a href="players.html" class="footer_last_part_menu">Players</a>
+                </li> -->
             <li>
               <a href="about.html" class="footer_last_part_menu">About</a>
             </li>
@@ -259,6 +259,9 @@
             </li>
             <li>
               <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
+            </li>
+            <li>
+              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
             </li>
           </ul>
         </div>
