--- a/events-backup.html
+++ b/events-backup.html
@@ -95,7 +95,7 @@
               <div>
                 <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Events</div>
               </div>
-  
+
               <div class="month">
                 <ul>
                   <li class="prev">&#10094;</li>
@@ -289,7 +289,7 @@
                   </div>
                 </div>
                 <div class="col-md-7 animate-box">
-                  <a href="single.html" class="fh5co_magna py-2"> PUBG - 
+                  <a href="single.html" class="fh5co_magna py-2"> PUBG -
                     <span style="color: red"> live now</span>
                   </a>
                   <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -321,7 +321,7 @@
                   </div>
                 </div>
               </div>
-              
+
             </div>
           </div>
         </div>
@@ -410,7 +410,7 @@
               <a href="videos.html" class="footer_last_part_menu">Latest Videos</a>
             </li>
             <li>
-              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
+              <a href="games.html" class="footer_last_part_menu">Games</a>
             </li>
           </ul>
         </div>
@@ -420,11 +420,11 @@
               <hr class="short">
             </li>
             <!-- <li>
-                <a href="teams.html" class="footer_last_part_menu">Teams</a>
-              </li>
-              <li>
-                <a href="players.html" class="footer_last_part_menu">Players</a>
-              </li> -->
+                  <a href="teams.html" class="footer_last_part_menu">Teams</a>
+                </li>
+                <li>
+                  <a href="players.html" class="footer_last_part_menu">Players</a>
+                </li> -->
             <li>
               <a href="about.html" class="footer_last_part_menu">About</a>
             </li>
@@ -436,6 +436,9 @@
             </li>
             <li>
               <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
+            </li>
+            <li>
+              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
             </li>
           </ul>
         </div>
