--- a/single.html
+++ b/single.html
@@ -116,16 +116,22 @@
                 Hendrerit efficiantur ex usu, duo id wisi magna. is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris
                 mei, at usu debet libris liberavisse. Hendrerit efficiantur ex usu, duo id wisi magna.</p>
               <hr class="short" style="margin-left: 0px">
-              <h4><a href="games.html">Games</a></h4>
+              <h4>
+                <a href="games.html" style="text-decoration: underline">Games</a>
+              </h4>
               <p>is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse.
                 Hendrerit efficiantur ex usu, duo id wisi magna. is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris
                 mei, at usu debet libris liberavisse. Hendrerit efficiantur ex usu, duo id wisi magna.</p>
               <hr class="short" style="margin-left: 0px">
-              <h4><a href="teams.html">Teams</a></h4>
+              <h4>
+                <a href="teams.html" style="text-decoration: underline">Teams</a>
+              </h4>
               <p>is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse.
                 Hendrerit efficiantur ex usu, duo id wisi magna.</p>
               <hr class="short" style="margin-left: 0px">
-              <h4><a href="sponsors.html">Sponsors</a></h4>
+              <h4>
+                <a href="sponsors.html" style="text-decoration: underline">Sponsors</a>
+              </h4>
               <p>is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse.
                 Hendrerit efficiantur ex usu, duo id wisi magna. is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris
                 mei, at usu debet libris liberavisse. Hendrerit efficiantur ex usu, duo id wisi magna.</p>
@@ -243,14 +249,14 @@
             </div>
 
             <div class="row mx-0">
-                <div class="col-12 text-center pb-4 pt-4">
-                  <a href="#" class="btn_mange_pagging">
-                    <i class="fa fa-long-arrow-left"></i>&nbsp;&nbsp; Previous</a>
-                  <a href="#" class="btn_mange_pagging">Next
-                    <i class="fa fa-long-arrow-right"></i>&nbsp;&nbsp; </a>
-                </div>
+              <div class="col-12 text-center pb-4 pt-4">
+                <a href="#" class="btn_mange_pagging">
+                  <i class="fa fa-long-arrow-left"></i>&nbsp;&nbsp; Previous</a>
+                <a href="#" class="btn_mange_pagging">Next
+                  <i class="fa fa-long-arrow-right"></i>&nbsp;&nbsp; </a>
               </div>
-              
+            </div>
+
           </div>
         </div>
 
@@ -339,7 +345,7 @@
               <a href="videos.html" class="footer_last_part_menu">Latest Videos</a>
             </li>
             <li>
-              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
+              <a href="games.html" class="footer_last_part_menu">Games</a>
             </li>
           </ul>
         </div>
@@ -365,6 +371,9 @@
             </li>
             <li>
               <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
+            </li>
+            <li>
+              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
             </li>
           </ul>
         </div>
