--- a/sponsors.html
+++ b/sponsors.html
@@ -141,24 +141,24 @@
               Id eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
               liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
               Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
-              <img src="images/user-circle.svg" style="height: 50px; width: 50px; margin-bottom: 20px">
-              <span style="font-size: 25px; vertical-align: middle; margin-left: 10px">Sponsor 2</span>
+            <img src="images/user-circle.svg" style="height: 50px; width: 50px; margin-bottom: 20px">
+            <span style="font-size: 25px; vertical-align: middle; margin-left: 10px">Sponsor 2</span>
             <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
               sed eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis
               vel et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri.
               Id eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
               liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
               Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
-              <img src="images/user-circle.svg" style="height: 50px; width: 50px; margin-bottom: 20px">
-              <span style="font-size: 25px; vertical-align: middle; margin-left: 10px">Sponsor 3</span>
+            <img src="images/user-circle.svg" style="height: 50px; width: 50px; margin-bottom: 20px">
+            <span style="font-size: 25px; vertical-align: middle; margin-left: 10px">Sponsor 3</span>
             <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
               sed eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis
               vel et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri.
               Id eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
               liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
               Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
-              <img src="images/user-circle.svg" style="height: 50px; width: 50px; margin-bottom: 20px">
-              <span style="font-size: 25px; vertical-align: middle; margin-left: 10px">Sponsor 4</span>
+            <img src="images/user-circle.svg" style="height: 50px; width: 50px; margin-bottom: 20px">
+            <span style="font-size: 25px; vertical-align: middle; margin-left: 10px">Sponsor 4</span>
             <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
               sed eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis
               vel et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri.
@@ -229,7 +229,7 @@
               <a href="videos.html" class="footer_last_part_menu">Latest Videos</a>
             </li>
             <li>
-              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
+              <a href="games.html" class="footer_last_part_menu">Games</a>
             </li>
           </ul>
         </div>
@@ -239,11 +239,11 @@
               <hr class="short">
             </li>
             <!-- <li>
-                <a href="teams.html" class="footer_last_part_menu">Teams</a>
-              </li>
-              <li>
-                <a href="players.html" class="footer_last_part_menu">Players</a>
-              </li> -->
+                  <a href="teams.html" class="footer_last_part_menu">Teams</a>
+                </li>
+                <li>
+                  <a href="players.html" class="footer_last_part_menu">Players</a>
+                </li> -->
             <li>
               <a href="about.html" class="footer_last_part_menu">About</a>
             </li>
@@ -255,6 +255,9 @@
             </li>
             <li>
               <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
+            </li>
+            <li>
+              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
             </li>
           </ul>
         </div>
