--- a/videos.html
+++ b/videos.html
@@ -307,7 +307,7 @@
               <a href="videos.html" class="footer_last_part_menu">Latest Videos</a>
             </li>
             <li>
-              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
+              <a href="games.html" class="footer_last_part_menu">Games</a>
             </li>
           </ul>
         </div>
@@ -333,6 +333,9 @@
             </li>
             <li>
               <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
+            </li>
+            <li>
+              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
             </li>
           </ul>
         </div>
