--- a/search.html
+++ b/search.html
@@ -81,64 +81,97 @@
       </nav>
     </div>
   </div>
-
-  <div class="container-fluid player_bg_img">
+  <!-- <div class="container-fluid contact_us_bg_img">
     <div class="container">
-      <img src="images/player2.png" style="padding-top: 30px">
+      <div class="row">
+        <a href="#" class="fh5co_con_123">
+          <i class="fa fa-home"></i>
+        </a>
+        <a href="#" class="fh5co_con pt-2"> About Us </a>
+      </div>
     </div>
-  </div>
+  </div> -->
+  <div class="container-fluid">
+    <div class="container" style="padding: 60px">
+      <h3>Search</h3>
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="input-group" style="margin-bottom: 30px">
+            <input type="text" class="form-control" placeholder="I'm looking for...">
+            <span class="input-group-btn">
+              <button class="btn btn-default" type="button" style="background-color: rgb(202, 202, 202); color: #fff">
+                <i class="fa fa-search"></i>
+              </button>
+            </span>
+          </div>
+          <!-- /input-group -->
 
-  <div class="container" style="padding: 60px">
-    <div class="container" style="padding-top: 30px">
-      <h3>Dave Smith</h3>
-      <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
-        <thead>
-          <tr>
-            <th>Top Map</th>
-            <th>Time Played</th>
-            <th>% Played</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr class="gradeX">
-            <td>
-              Hoth: Imperial Base 2.0
-            </td>
-            <td>
-              1h 23m 20s</td>
-            <td>25%</td>
-          </tr>
-          <tr class="gradeX">
-            <td>
-              Hoth: Imperial Base 2.0
-            </td>
-            <td>
-              1h 23m 20s</td>
-            <td>25%</td>
-          </tr>
-          <tr class="gradeX">
-            <td>
-              Hoth: Imperial Base 2.0
-            </td>
-            <td>
-              1h 23m 20s</td>
-            <td>25%</td>
-          </tr>
-          <tr class="gradeX">
-            <td>
-              Hoth: Imperial Base 2.0
-            </td>
-            <td>
-              1h 23m 20s</td>
-            <td>25%</td>
-          </tr>
-        </tbody>
-      </table>
+          <div class="animate-box" style="margin-bottom: 30px">
+            <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
+            <!-- <div>
+            <a href="#" class="d-block fh5co_small_post_heading">
+            <span class="">Tom Smith</span>
+            </a>
+            <div class="c_g">
+            <i class="fa fa-clock-o"></i> Apr 18, 2018</div>
+            </div> -->
+            <br>
+            <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+              ad minim veniam, quis nostrud exercitation.
+            </div>
+          </div>
+
+          <div class="animate-box" style="margin-bottom: 30px">
+            <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
+            <!-- <div>
+            <a href="#" class="d-block fh5co_small_post_heading">
+            <span class="">Tom Smith</span>
+            </a>
+            <div class="c_g">
+            <i class="fa fa-clock-o"></i> Apr 18, 2018</div>
+            </div> -->
+            <br>
+            <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+              ad minim veniam, quis nostrud exercitation.
+            </div>
+          </div>
+
+          <div class="animate-box" style="margin-bottom: 30px">
+            <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
+            <!-- <div>
+            <a href="#" class="d-block fh5co_small_post_heading">
+            <span class="">Tom Smith</span>
+            </a>
+            <div class="c_g">
+            <i class="fa fa-clock-o"></i> Apr 18, 2018</div>
+            </div> -->
+            <br>
+            <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+              ad minim veniam, quis nostrud exercitation.
+            </div>
+          </div>
+
+          <div class="animate-box" style="margin-bottom: 30px">
+            <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
+            <!-- <div>
+            <a href="#" class="d-block fh5co_small_post_heading">
+            <span class="">Tom Smith</span>
+            </a>
+            <div class="c_g">
+            <i class="fa fa-clock-o"></i> Apr 18, 2018</div>
+            </div> -->
+            <br>
+            <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+              ad minim veniam, quis nostrud exercitation.
+            </div>
+          </div>
+        </div>
+        <!-- /.col-lg-6 -->
+      </div>
+      <!-- /.row -->
     </div>
 
-  </div>
-
-  <!-- <div class="container-fluid pb-4 pt-5">
+    <!-- <div class="container-fluid pb-4 pt-5">
       <div class="container animate-box">
         <div>
           <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">
@@ -178,7 +211,7 @@
       </div>
     </div> -->
 
-
+  </div>
 
   <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
@@ -188,12 +221,12 @@
       <div class="row">
         <div class="col-12 col-md-6">
           <!-- <div class="text-center d-inline-block">
-                  <a class="fh5co_display_table">
-                    <div class="fh5co_verticle_middle">
-                      <i class="fa fa-search"></i>
-                    </div>
-                  </a>
-                </div> -->
+                <a class="fh5co_display_table">
+                  <div class="fh5co_verticle_middle">
+                    <i class="fa fa-search"></i>
+                  </div>
+                </a>
+              </div> -->
           <div class="text-center d-inline-block">
             <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
               <div class="fh5co_verticle_middle">
