--- a/events.html
+++ b/events.html
@@ -60,11 +60,12 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <!-- <li class="nav-item ">
-                  <a class="nav-link" href="players.html">Player Bios
-                    <span class="sr-only">(current)</span>
-                  </a>
-                </li> -->
+            <li class="nav-item ">
+              <a class="nav-link" href="search.html">
+                <i class="fa fa-search"></i>
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
             <!-- <li class="nav-item ">
                   <a class="nav-link" href="compete.html">Compete
                     <span class="sr-only">(current)</span>
@@ -734,12 +735,12 @@
       <div class="row">
         <div class="col-12 col-md-6">
           <!-- <div class="text-center d-inline-block">
-              <a class="fh5co_display_table">
-                <div class="fh5co_verticle_middle">
-                  <i class="fa fa-search"></i>
-                </div>
-              </a>
-            </div> -->
+                <a class="fh5co_display_table">
+                  <div class="fh5co_verticle_middle">
+                    <i class="fa fa-search"></i>
+                  </div>
+                </a>
+              </div> -->
           <div class="text-center d-inline-block">
             <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
               <div class="fh5co_verticle_middle">
@@ -751,6 +752,13 @@
             <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
               <div class="fh5co_verticle_middle">
                 <i class="fa fa-facebook"></i>
+              </div>
+            </a>
+          </div>
+          <div class="text-center d-inline-block">
+            <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
+              <div class="fh5co_verticle_middle">
+                <i class="fa fa-youtube"></i>
               </div>
             </a>
           </div>
@@ -792,12 +800,12 @@
             <li>
               <hr class="short">
             </li>
-            <!-- <li>
-                  <a href="teams.html" class="footer_last_part_menu">Teams</a>
-                </li>
-                <li>
-                  <a href="players.html" class="footer_last_part_menu">Players</a>
-                </li> -->
+            <li>
+              <a href="teams.html" class="footer_last_part_menu">Teams</a>
+            </li>
+            <li>
+              <a href="players.html" class="footer_last_part_menu">Players</a>
+            </li>
             <li>
               <a href="about.html" class="footer_last_part_menu">About</a>
             </li>
