--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <!-- <li class="nav-item ">
-              <a class="nav-link" href="players.html">Player Bios
+            <li class="nav-item ">
+              <a class="nav-link" href="search.html"><i class="fa fa-search"></i>
                 <span class="sr-only">(current)</span>
               </a>
-            </li> -->
+            </li>
             <!-- <li class="nav-item ">
               <a class="nav-link" href="compete.html">Compete
                 <span class="sr-only">(current)</span>
@@ -82,11 +82,13 @@
   </div>
 
   <div id="fh5co-background-box">
-    <div id="fh5co-title-box" style="background-image: url(images/gameplay.jpg)">
+    <div id="fh5co-title-box" style="background-image: url(images/gameplay.jpg)" class="img-fluid">
       <div class="overlay"></div>
       <div class="page-title">
-        <!-- <h2>LIVE TWITCH STREAM</h2>
-      <h5 style="color:#fff; padding: 20px; width: 250px; margin: 60px auto; border: solid 1px rgb(255,255,255)">WATCH NOW</h5> -->
+        <!-- <h2>LIVE TWITCH STREAM</h2> -->
+        <a href="#">
+          <h5 style="color:#fff; background-color: rgba(80, 80, 80,0.3); padding: 20px; width: 250px; margin: 60px auto; border: solid 1px rgb(255,255,255)">WATCH NOW</h5>
+        </a>
       </div>
     </div>
   </div>
@@ -367,6 +369,13 @@
           <div class="text-center d-inline-block">
             <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
               <div class="fh5co_verticle_middle">
+                <i class="fa fa-youtube"></i>
+              </div>
+            </a>
+          </div>
+          <div class="text-center d-inline-block">
+            <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
+              <div class="fh5co_verticle_middle">
                 <i class="fa fa-envelope"></i>
               </div>
             </a>
@@ -402,12 +411,12 @@
             <li>
               <hr class="short">
             </li>
-            <!-- <li>
-                <a href="teams.html" class="footer_last_part_menu">Teams</a>
-              </li>
-              <li>
-                <a href="players.html" class="footer_last_part_menu">Players</a>
-              </li> -->
+            <li>
+              <a href="teams.html" class="footer_last_part_menu">Teams</a>
+            </li>
+            <li>
+              <a href="players.html" class="footer_last_part_menu">Players</a>
+            </li>
             <li>
               <a href="about.html" class="footer_last_part_menu">About</a>
             </li>
