--- a/news.html
+++ b/news.html
@@ -60,11 +60,12 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <!-- <li class="nav-item ">
-                <a class="nav-link" href="players.html">Player Bios
-                  <span class="sr-only">(current)</span>
-                </a>
-              </li> -->
+            <li class="nav-item ">
+              <a class="nav-link" href="search.html">
+                <i class="fa fa-search"></i>
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
             <!-- <li class="nav-item ">
                 <a class="nav-link" href="compete.html">Compete
                   <span class="sr-only">(current)</span>
@@ -101,10 +102,10 @@
               <a href="single.html" class="fh5co_magna py-2 "> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
               <div>
                 <a href="#" class="d-block fh5co_small_post_heading">
-                  <span class="">Thomash Smith</span>
+                  <span class="">Tom Smith</span>
                 </a>
                 <div class="c_g">
-                  <i class="fa fa-clock-o"></i> April 18, 2018</div>
+                  <i class="fa fa-clock-o"></i> Apr 18, 2018</div>
               </div>
               <br>
               <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -125,10 +126,10 @@
               <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
               <div>
                 <a href="#" class="d-block fh5co_small_post_heading">
-                  <span class="">Thomash Smith</span>
+                  <span class="">Tom Smith</span>
                 </a>
                 <div class="c_g">
-                  <i class="fa fa-clock-o"></i> April 18, 2018</div>
+                  <i class="fa fa-clock-o"></i> Apr 18, 2018</div>
               </div>
               <br>
               <div class="fh5co_consectetur"> Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -149,10 +150,10 @@
               <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
               <div>
                 <a href="#" class="d-block fh5co_small_post_heading">
-                  <span class="">Thomash Smith</span>
+                  <span class="">Tom Smith</span>
                 </a>
                 <div class="c_g">
-                  <i class="fa fa-clock-o"></i> April 18, 2018</div>
+                  <i class="fa fa-clock-o"></i> Apr 18, 2018</div>
               </div>
               <br>
               <div class="fh5co_consectetur"> Quis nostrud xercitation ullamco laboris nisi aliquip ex ea commodo consequat.
@@ -172,10 +173,10 @@
               <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
               <div>
                 <a href="#" class="d-block fh5co_small_post_heading">
-                  <span class="">Thomash Smith</span>
+                  <span class="">Tom Smith</span>
                 </a>
                 <div class="c_g">
-                  <i class="fa fa-clock-o"></i> April 18, 2018</div>
+                  <i class="fa fa-clock-o"></i> Apr 18, 2018</div>
               </div>
               <br>
               <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -216,7 +217,7 @@
             </div>
             <div class="col-7 paddding">
               <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
-              <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
+              <div class="most_fh5co_treding_font_123"> Apr 18, 2018</div>
             </div>
           </div>
           <div class="row pb-3">
@@ -225,7 +226,7 @@
             </div>
             <div class="col-7 paddding">
               <div class="most_fh5co_treding_font"> Enim ad minim veniam nostrud xercitation ullamco.</div>
-              <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
+              <div class="most_fh5co_treding_font_123"> Apr 18, 2018</div>
             </div>
           </div>
           <div class="row pb-3">
@@ -234,7 +235,7 @@
             </div>
             <div class="col-7 paddding">
               <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
-              <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
+              <div class="most_fh5co_treding_font_123"> Apr 18, 2018</div>
             </div>
           </div>
           <div class="row pb-3">
@@ -243,7 +244,7 @@
             </div>
             <div class="col-7 paddding">
               <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
-              <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
+              <div class="most_fh5co_treding_font_123"> Apr 18, 2018</div>
             </div>
           </div>
         </div>
@@ -332,12 +333,12 @@
       <div class="row">
         <div class="col-12 col-md-6">
           <!-- <div class="text-center d-inline-block">
-              <a class="fh5co_display_table">
-                <div class="fh5co_verticle_middle">
-                  <i class="fa fa-search"></i>
-                </div>
-              </a>
-            </div> -->
+                <a class="fh5co_display_table">
+                  <div class="fh5co_verticle_middle">
+                    <i class="fa fa-search"></i>
+                  </div>
+                </a>
+              </div> -->
           <div class="text-center d-inline-block">
             <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
               <div class="fh5co_verticle_middle">
@@ -349,6 +350,13 @@
             <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
               <div class="fh5co_verticle_middle">
                 <i class="fa fa-facebook"></i>
+              </div>
+            </a>
+          </div>
+          <div class="text-center d-inline-block">
+            <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
+              <div class="fh5co_verticle_middle">
+                <i class="fa fa-youtube"></i>
               </div>
             </a>
           </div>
@@ -390,12 +398,12 @@
             <li>
               <hr class="short">
             </li>
-            <!-- <li>
-                  <a href="teams.html" class="footer_last_part_menu">Teams</a>
-                </li>
-                <li>
-                  <a href="players.html" class="footer_last_part_menu">Players</a>
-                </li> -->
+            <li>
+              <a href="teams.html" class="footer_last_part_menu">Teams</a>
+            </li>
+            <li>
+              <a href="players.html" class="footer_last_part_menu">Players</a>
+            </li>
             <li>
               <a href="about.html" class="footer_last_part_menu">About</a>
             </li>
