--- a/single.html
+++ b/single.html
@@ -60,11 +60,12 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <!-- <li class="nav-item ">
-                  <a class="nav-link" href="players.html">Player Bios
-                    <span class="sr-only">(current)</span>
-                  </a>
-                </li> -->
+            <li class="nav-item ">
+              <a class="nav-link" href="search.html">
+                <i class="fa fa-search"></i>
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
             <!-- <li class="nav-item ">
                   <a class="nav-link" href="compete.html">Compete
                     <span class="sr-only">(current)</span>
@@ -85,8 +86,10 @@
     <div id="fh5co-title-box" class="img-fluid" style="background-image: url(images/gameplay.jpg);">
       <div class="overlay"></div>
       <div class="page-title">
-        <!-- <h2>LIVE TWITCH STREAM</h2>
-      <h5 style="color:#fff; padding: 20px; width: 250px; margin: 60px auto; border: solid 1px rgb(255,255,255)">WATCH NOW</h5> -->
+        <!-- <h2>LIVE TWITCH STREAM</h2> -->
+        <a href="#">
+          <h5 style="color:#fff; background-color: rgba(80, 80, 80,0.3); padding: 20px; width: 250px; margin: 60px auto; border: solid 1px rgb(255,255,255)">WATCH NOW</h5>
+        </a>
       </div>
     </div>
   </div>
@@ -146,6 +149,7 @@
 
             <div class="container" style="padding-top: 30px">
               <h3>PUBG Aftermath</h3>
+              <p>Oct 02, 2018</p>
               <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
                 <thead>
                   <tr>
@@ -248,14 +252,14 @@
               </table>
             </div>
 
-            <div class="row mx-0">
+            <!-- <div class="row mx-0">
               <div class="col-12 text-center pb-4 pt-4">
                 <a href="#" class="btn_mange_pagging">
                   <i class="fa fa-long-arrow-left"></i>&nbsp;&nbsp; Previous</a>
                 <a href="#" class="btn_mange_pagging">Next
                   <i class="fa fa-long-arrow-right"></i>&nbsp;&nbsp; </a>
               </div>
-            </div>
+            </div> -->
 
           </div>
         </div>
@@ -319,6 +323,13 @@
           <div class="text-center d-inline-block">
             <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
               <div class="fh5co_verticle_middle">
+                <i class="fa fa-youtube"></i>
+              </div>
+            </a>
+          </div>
+          <div class="text-center d-inline-block">
+            <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
+              <div class="fh5co_verticle_middle">
                 <i class="fa fa-envelope"></i>
               </div>
             </a>
@@ -354,12 +365,12 @@
             <li>
               <hr class="short">
             </li>
-            <!-- <li>
-                  <a href="teams.html" class="footer_last_part_menu">Teams</a>
-                </li>
-                <li>
-                  <a href="players.html" class="footer_last_part_menu">Players</a>
-                </li> -->
+            <li>
+              <a href="teams.html" class="footer_last_part_menu">Teams</a>
+            </li>
+            <li>
+              <a href="players.html" class="footer_last_part_menu">Players</a>
+            </li>
             <li>
               <a href="about.html" class="footer_last_part_menu">About</a>
             </li>
