--- a/teams.html
+++ b/teams.html
@@ -107,11 +107,12 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <!-- <li class="nav-item ">
-                  <a class="nav-link" href="players.html">Player Bios
-                    <span class="sr-only">(current)</span>
-                  </a>
-                </li> -->
+            <li class="nav-item ">
+              <a class="nav-link" href="search.html">
+                <i class="fa fa-search"></i>
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
             <!-- <li class="nav-item ">
                   <a class="nav-link" href="compete.html">Compete
                     <span class="sr-only">(current)</span>
@@ -132,7 +133,7 @@
     <div class="container animate-box">
       <div>
         <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">
-          Teams
+          PUBG Teams
         </div>
       </div>
       <div class="owl-carousel owl-theme" id="slider4">
@@ -149,10 +150,6 @@
                 <div class="col-md-8">
                   <h1>Fa_Ze Clan</h1>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet
-                    sit amet ut elit. Nulla accumsan nisl sapien</p>
-                  <hr class="short hr-short-margin">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet
-                    lectus pulvinar posuere. Nunc vehicula eleifend egestas. Vivamus in lorem in dolor molestie molestie
                     sit amet ut elit. Nulla accumsan nisl sapien</p>
                   <hr class="short" style="margin-left: 0px"> Based in: United States</p>
                 </div>
@@ -251,10 +248,6 @@
                   <h1>Campers-Delight</h1>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet
                     sit amet ut elit. Nulla accumsan nisl sapien</p>
-                  <hr class="short hr-short-margin">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet
-                    lectus pulvinar posuere. Nunc vehicula eleifend egestas. Vivamus in lorem in dolor molestie molestie
-                    sit amet ut elit. Nulla accumsan nisl sapien</p>
                   <hr class="short" style="margin-left: 0px"> Based in: United States</p>
                 </div>
               </div>
@@ -352,10 +345,6 @@
                   <h1>Bazooka_Klowns</h1>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet
                     sit amet ut elit. Nulla accumsan nisl sapien</p>
-                  <hr class="short hr-short-margin">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet
-                    lectus pulvinar posuere. Nunc vehicula eleifend egestas. Vivamus in lorem in dolor molestie molestie
-                    sit amet ut elit. Nulla accumsan nisl sapien</p>
                   <hr class="short" style="margin-left: 0px"> Based in: United States</p>
                 </div>
               </div>
@@ -441,8 +430,6 @@
     </div>
   </div>
 
-
-
   <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
       <div class="row">
@@ -468,6 +455,13 @@
             <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
               <div class="fh5co_verticle_middle">
                 <i class="fa fa-facebook"></i>
+              </div>
+            </a>
+          </div>
+          <div class="text-center d-inline-block">
+            <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
+              <div class="fh5co_verticle_middle">
+                <i class="fa fa-youtube"></i>
               </div>
             </a>
           </div>
@@ -509,12 +503,12 @@
             <li>
               <hr class="short">
             </li>
-            <!-- <li>
-                  <a href="teams.html" class="footer_last_part_menu">Teams</a>
-                </li>
-                <li>
-                  <a href="players.html" class="footer_last_part_menu">Players</a>
-                </li> -->
+            <li>
+              <a href="teams.html" class="footer_last_part_menu">Teams</a>
+            </li>
+            <li>
+              <a href="players.html" class="footer_last_part_menu">Players</a>
+            </li>
             <li>
               <a href="about.html" class="footer_last_part_menu">About</a>
             </li>
