--- a/teams.html
+++ b/teams.html
@@ -167,7 +167,7 @@
                 <tbody>
                   <tr class="gradeX">
                     <td>
-                      <a href="players.html">Killz_Streak57</a>
+                      <a href="player1.html">Killz_Streak57</a>
                     </td>
                     </td>
                     <td class="center">
@@ -177,7 +177,7 @@
                   </tr>
                   <tr class="gradeX">
                     <td>
-                      <a href="players.html">Killz_Streak57</a>
+                      <a href="player1.html">Killz_Streak57</a>
                     </td>
                     </td>
                     <td class="center">
@@ -187,7 +187,7 @@
                   </tr>
                   <tr class="gradeX">
                     <td>
-                      <a href="players.html">Killz_Streak57</a>
+                      <a href="player1.html">Killz_Streak57</a>
                     </td>
                     </td>
                     <td class="center">
@@ -197,7 +197,7 @@
                   </tr>
                   <tr class="gradeX">
                     <td>
-                      <a href="players.html">Killz_Streak57</a>
+                      <a href="player1.html">Killz_Streak57</a>
                     </td>
                     </td>
                     <td class="center">
@@ -207,7 +207,7 @@
                   </tr>
                   <tr class="gradeX">
                     <td>
-                      <a href="players.html">Killz_Streak57</a>
+                      <a href="player1.html">Killz_Streak57</a>
                     </td>
                     </td>
                     <td class="center">
@@ -217,7 +217,7 @@
                   </tr>
                   <tr class="gradeX">
                     <td>
-                      <a href="players.html">Killz_Streak57</a>
+                      <a href="player1.html">Killz_Streak57</a>
                     </td>
                     </td>
                     <td class="center">
@@ -264,7 +264,7 @@
                 <tbody>
                   <tr class="gradeX">
                     <td>
-                      <a href="players.html">Killz_Streak57</a>
+                      <a href="player1.html">Killz_Streak57</a>
                     </td>
                     </td>
                     <td class="center">
@@ -274,7 +274,7 @@
                   </tr>
                   <tr class="gradeX">
                     <td>
-                      <a href="players.html">Killz_Streak57</a>
+                      <a href="player1.html">Killz_Streak57</a>
                     </td>
                     </td>
                     <td class="center">
@@ -284,7 +284,7 @@
                   </tr>
                   <tr class="gradeX">
                     <td>
-                      <a href="players.html">Killz_Streak57</a>
+                      <a href="player1.html">Killz_Streak57</a>
                     </td>
                     </td>
                     <td class="center">
@@ -294,7 +294,7 @@
                   </tr>
                   <tr class="gradeX">
                     <td>
-                      <a href="players.html">Killz_Streak57</a>
+                      <a href="player1.html">Killz_Streak57</a>
                     </td>
                     </td>
                     <td class="center">
@@ -304,7 +304,7 @@
                   </tr>
                   <tr class="gradeX">
                     <td>
-                      <a href="players.html">Killz_Streak57</a>
+                      <a href="player1.html">Killz_Streak57</a>
                     </td>
                     </td>
                     <td class="center">
@@ -314,7 +314,7 @@
                   </tr>
                   <tr class="gradeX">
                     <td>
-                      <a href="players.html">Killz_Streak57</a>
+                      <a href="player1.html">Killz_Streak57</a>
                     </td>
                     </td>
                     <td class="center">
@@ -361,7 +361,7 @@
                 <tbody>
                   <tr class="gradeX">
                     <td>
-                      <a href="players.html">Killz_Streak57</a>
+                      <a href="player1.html">Killz_Streak57</a>
                     </td>
                     </td>
                     <td class="center">
@@ -371,7 +371,7 @@
                   </tr>
                   <tr class="gradeX">
                     <td>
-                      <a href="players.html">Killz_Streak57</a>
+                      <a href="player1.html">Killz_Streak57</a>
                     </td>
                     </td>
                     <td class="center">
@@ -381,7 +381,7 @@
                   </tr>
                   <tr class="gradeX">
                     <td>
-                      <a href="players.html">Killz_Streak57</a>
+                      <a href="player1.html">Killz_Streak57</a>
                     </td>
                     </td>
                     <td class="center">
@@ -391,7 +391,7 @@
                   </tr>
                   <tr class="gradeX">
                     <td>
-                      <a href="players.html">Killz_Streak57</a>
+                      <a href="player1.html">Killz_Streak57</a>
                     </td>
                     </td>
                     <td class="center">
@@ -401,7 +401,7 @@
                   </tr>
                   <tr class="gradeX">
                     <td>
-                      <a href="players.html">Killz_Streak57</a>
+                      <a href="player1.html">Killz_Streak57</a>
                     </td>
                     </td>
                     <td class="center">
@@ -411,7 +411,7 @@
                   </tr>
                   <tr class="gradeX">
                     <td>
-                      <a href="players.html">Killz_Streak57</a>
+                      <a href="player1.html">Killz_Streak57</a>
                     </td>
                     </td>
                     <td class="center">
