--- a/player1.html
+++ b/player1.html
@@ -88,9 +88,18 @@
     </div>
   </div>
 
+
+
   <div class="container" style="padding: 60px">
     <div class="container" style="padding-top: 30px">
       <h3>Dave Smith</h3>
+      <h5>Killz_Streak57</h5>
+      <hr class="short" style="margin-left: 0px">
+      <p>is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse. Hendrerit
+        efficiantur ex usu, duo id wisi magna. is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei,
+        at usu debet libris liberavisse. Hendrerit efficiantur ex usu, duo id wisi magna.</p>
+      <h5>Stats</h5>
+      <hr class="short" style="margin-left: 0px">
       <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
         <thead>
           <tr>
