--- a/news.html
+++ b/news.html
@@ -99,9 +99,9 @@
               </div>
             </div>
             <div class="col-md-7 animate-box">
-              <a href="single.html" class="fh5co_magna py-2 "> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
+              <a href="single-news.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
               <div>
-                <a href="#" class="d-block fh5co_small_post_heading">
+                <a href="single-news.html" class="d-block fh5co_small_post_heading">
                   <span class="">Tom Smith</span>
                 </a>
                 <div class="c_g">
@@ -123,9 +123,9 @@
               </div>
             </div>
             <div class="col-md-7">
-              <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
+              <a href="single-news.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
               <div>
-                <a href="#" class="d-block fh5co_small_post_heading">
+                <a href="single-news.html" class="d-block fh5co_small_post_heading">
                   <span class="">Tom Smith</span>
                 </a>
                 <div class="c_g">
@@ -147,9 +147,9 @@
               </div>
             </div>
             <div class="col-md-7">
-              <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
+              <a href="single-news.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
               <div>
-                <a href="#" class="d-block fh5co_small_post_heading">
+                <a href="single-news.html" class="d-block fh5co_small_post_heading">
                   <span class="">Tom Smith</span>
                 </a>
                 <div class="c_g">
@@ -170,9 +170,9 @@
               </div>
             </div>
             <div class="col-md-7">
-              <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
+              <a href="single-news.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
               <div>
-                <a href="#" class="d-block fh5co_small_post_heading">
+                <a href="single-news.html" class="d-block fh5co_small_post_heading">
                   <span class="">Tom Smith</span>
                 </a>
                 <div class="c_g">
@@ -216,7 +216,7 @@
               <img src="images/blog-post-sm.jpg" alt="img" class="fh5co_most_trading" />
             </div>
             <div class="col-7 paddding">
-              <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
+              <div class="most_fh5co_treding_font"><a href="single-news.html"> Magna aliqua ut enim ad minim veniam quis nostrud.</a></div>
               <div class="most_fh5co_treding_font_123"> Apr 18, 2018</div>
             </div>
           </div>
@@ -225,7 +225,7 @@
               <img src="images/blog-post-sm.jpg" alt="img" class="fh5co_most_trading" />
             </div>
             <div class="col-7 paddding">
-              <div class="most_fh5co_treding_font"> Enim ad minim veniam nostrud xercitation ullamco.</div>
+              <div class="most_fh5co_treding_font"><a href="single-news.html"> Magna aliqua ut enim ad minim veniam quis nostrud.</a></div>
               <div class="most_fh5co_treding_font_123"> Apr 18, 2018</div>
             </div>
           </div>
@@ -234,7 +234,7 @@
               <img src="images/blog-post-sm.jpg" alt="img" class="fh5co_most_trading" />
             </div>
             <div class="col-7 paddding">
-              <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
+              <div class="most_fh5co_treding_font"><a href="single-news.html"> Magna aliqua ut enim ad minim veniam quis nostrud.</a></div>
               <div class="most_fh5co_treding_font_123"> Apr 18, 2018</div>
             </div>
           </div>
@@ -243,7 +243,7 @@
               <img src="images/blog-post-sm.jpg" alt="img" class="fh5co_most_trading" />
             </div>
             <div class="col-7 paddding">
-              <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
+              <div class="most_fh5co_treding_font"><a href="single-news.html"> Magna aliqua ut enim ad minim veniam quis nostrud.</a></div>
               <div class="most_fh5co_treding_font_123"> Apr 18, 2018</div>
             </div>
           </div>
@@ -271,8 +271,8 @@
               <img src="images/39-324x235.jpg" alt="" />
             </div>
             <div>
-              <a href="#" class="d-block fh5co_small_post_heading">
-                <span class="">Lorum Ipsum</span>
+              <a href="single-news.html" class="d-block fh5co_small_post_heading">
+                <span class="fa-hover">Lorum Ipsum</span>
               </a>
               <div class="c_g">
                 <i class="fa fa-clock-o"></i> Oct 16,2017</div>
@@ -285,8 +285,8 @@
               <img src="images/39-324x235.jpg" alt="" />
             </div>
             <div>
-              <a href="#" class="d-block fh5co_small_post_heading">
-                <span class="">Lorum Ipsum</span>
+              <a href="single-news.html" class="d-block fh5co_small_post_heading">
+                <span class="fa-hover">Lorum Ipsum</span>
               </a>
               <div class="c_g">
                 <i class="fa fa-clock-o"></i> Oct 16,2017</div>
@@ -299,8 +299,8 @@
               <img src="images/39-324x235.jpg" alt="" />
             </div>
             <div>
-              <a href="#" class="d-block fh5co_small_post_heading">
-                <span class="">Lorum Ipsum</span>
+              <a href="single-news.html" class="d-block fh5co_small_post_heading">
+                <span class="fa-hover">Lorum Ipsum</span>
               </a>
               <div class="c_g">
                 <i class="fa fa-clock-o"></i> Oct 16,2017</div>
@@ -313,8 +313,8 @@
               <img src="images/39-324x235.jpg" alt="" />
             </div>
             <div>
-              <a href="#" class="d-block fh5co_small_post_heading">
-                <span class="">Lorum Ipsum</span>
+              <a href="single-news.html" class="d-block fh5co_small_post_heading">
+                <span class="fa-hover">Lorum Ipsum</span>
               </a>
               <div class="c_g">
                 <i class="fa fa-clock-o"></i> Oct 16,2017</div>
