--- a/single-news.html
+++ b/single-news.html
@@ -102,7 +102,7 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item ">
               <a class="nav-link" href="videos.html">Latest Videos
                 <span class="sr-only">(current)</span>
               </a>
@@ -149,7 +149,7 @@
               <img src="images/feat-content.jpg" alt="" class="img-fluid">
             </li>
             <li class="d-inline-block" style="font-size: 16px; margin-right: 15px">
-              <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Title Lorum Ipsum Dolet.</p>
+              <p style="font-weight: 500; font-size: 28px; margin-top: 8px">Title Lorum Ipsum Dolet.</p>
             </li>
             <li class="d-inline-block pull-right" style="font-size: 16px; margin-left: 30px; margin-top: 15px; color: #9d9d9d">
               <i class="fa fa-twitter fa-hover"></i>
@@ -161,76 +161,24 @@
               <i class="fa fa-envelope fa-hover"></i>
             </li>
             <li style="margin-top: -15px">
-              <p style="font-weight: 500; font-size: 16px; margin-top: 8px">Description Lorum Ipsum Dolet.</p>
+              <p style="font-weight: 500; font-size: 16px; margin-top: 8px">By: Sam Smith</p>
               <p style="font-weight: 300; font-size: 14px; margin-top: -20px">Oct, 02 2018</p>
-              <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
             </li>
           </ul>
         </div>
-        <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-responsive table-bordered">
-          <tbody>
-            <tr>
-              <td>
-                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
-                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
-                <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
-              </td>
-              <td>
-                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
-                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
-                <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
-              </td>
-              <td>
-                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
-                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
-                <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
-                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
-                <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
-              </td>
-              <td>
-                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
-                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
-                <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
-              </td>
-              <td>
-                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
-                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
-                <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
-                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
-                <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
-              </td>
-              <td>
-                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
-                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
-                <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
-              </td>
-              <td>
-                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
-                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
-                <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+
+        <div class="col-md-9 animate-box">
+                <div class="fh5co_consectetur"> 
+                    <p>Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                  enim ad minim veniam, quis nostrud exercitation.</p>
+                  <p>Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                        enim ad minim veniam, quis nostrud exercitation.</p>
+                        <p>Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                                enim ad minim veniam, quis nostrud exercitation.</p>
+                                <p>Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                                        enim ad minim veniam, quis nostrud exercitation.</p>
+                </div>
+              </div>
 
         <div class="row mx-0" style="margin-bottom: 60px">
           <div class="col-12 text-center pb-4 pt-4">
